# mathx

assignment1/: prob_one.csv  prob_three.csv
assignment3/: data.csv
assignment6/: .out  data.csv
assignment7/: .out  data.csv
assignment8/: .out  data.csv
assignment9/: prob3.csv  prob4.csv
docs/: a00002.html  a00002.js  a00003.js  a00004.html  a00005.html  a00006.html  a00006_source.html  a00007_source.html  a00008.html  a00008.js  a00010_source.html  a00011_source.html  a00012.js  a00012_source.html  a00013.html  a00014.html  a00014_source.html  a00015.html  a00015.js  a00017.html  a00017.js  a00017_source.html  a00019.html  a00019.js  a00019_source.html  a00020.html  a00020_source.html  a00021.js  a00022.html  a00023.html  a00024.html  a00025.html  a00025.js  a00025.md5  a00026.html  a00027.md5  a00028.md5  a00030.map  a00031.html  a00031.js  (+86 more)
docs/html/: a00001.html  a00001.js  a00003.html  a00004.js  a00006.js  a00007.html  a00007.js  a00008_source.html  a00009.html  a00009.js  a00009_source.html  a00010.html  a00010.js  a00011.html  a00012.html  a00013.js  a00013_source.html  a00014.js  a00015_source.html  a00016.html  a00016.js  (+107 more)
lib/: .dox  .final.cpp  .hmk11.cpp  .hmk12.cpp  .hmk4.cpp  .hmk5.cpp  .hmk7.cpp  .hmk8.cpp  .hmk9.cpp  .out  CMakeLists.txt  main.cpp
lib/documentation/: manual.tex
lib/documentation/bibtex/: all.bib
lib/documentation/software_manual/: manuscript.aux  manuscript.bbl  manuscript.blg  manuscript.tex  manuscript.toc  paper.tex  software_manual_rubric.tex
lib/documentation/software_manual/parts/: appendix1.tex  introduction.tex  maceps.f  maceps.out  section2.tex  section3.tex  section4.tex  section5.tex  section6.tex  section7.tex  title.tex  utils.tex
lib/examples/: a.out  array.cpp  goodrand.cpp  interpolation.cpp  linsolv.cpp  matrix.cpp  precision.cpp  roots.cpp  vectors.cpp
lib/gtest-1.8.0/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/headers/: array.hpp  diffeq.hpp  goodrand.hpp  integration.hpp  interpolation.hpp  linsolv.hpp  linsys.hpp  mathx.hpp  matrix.hpp  roots.hpp  utils.hpp  vectors.hpp
lib/sources/: title.cpp
lib/tests/: ArrayTest.hpp  MathxTest.cpp  RootsTest.hpp  UtilsTest.hpp  VectorsTest.cpp  VectorsTest.hpp  tests.cpp
(+63 files in other folders)
